--- a/publications.html
+++ b/publications.html
@@ -74,25 +74,49 @@
 		 
 
 	<!-- </table> -->
-
 	<HR>
 
-		<font size="4" color="black"><b>2025 / in press</b></font>
+		<font size="4" color="black"><b>2026 / in press</b></font>
 		<br>
 	
 		<table border=0 cellpadding=4>
 			
 			<tr>
-				<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td><img src="./publication/wacv-26.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Structured Context Learning for Generic Event Boundary Detection</font>
+						<br>
+						<font color="#000000">X. Gu*, C. Li*, X. Wang, D. Hong, L. Zhang, T. Luo, L. Wen, and H. Fan</font>
+						<br>
+						<font>IEEE/CVF Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2026.</font>
+						<br>
+						<a href="https://arxiv.org/abs/2512.00475" target="_blank"><font color="#2D61FF">paper</font></a> 
+						<br>
+					</p>
+				</td>
+			</tr>
+
+		</table>
+
+	<HR>
+
+		<font size="4" color="black"><b>2025</b></font>
+		<br>
+	
+		<table border=0 cellpadding=4>
+			
+			<tr>
+				<td><img src="./publication/planartrack_ext.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">PlanarTrack: A High-quality and Challenging Benchmark for Large-scale Planar Object Tracking</font>
 						<br>
-						<font color="#000000">Y. Jiao, X. Liu, X. Liu, X. Yuan, H. Fan, and L. Zhang&dagger;</font>
+						<font color="#000000">Y. Jiao, X. Liu, X. Liu, X. Yuan, H. Fan, and L. Zhang</font>
 						<br>
 						<font>Computer Vision and Image Understanding (<b>CVIU</b>), 306: 130848, 2025.</font>
 						<br>
-						paper  &nbsp; code
+						<a href="https://arxiv.org/abs/2510.23368" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; <a href="#" target="_blank"><font color="#2D61FF">data</font></a>
 						<br>
 					</p>
 				</td>
@@ -108,7 +132,7 @@
 						<br>
 						<font>Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2025.</font>
 						<br>
-						paper  &nbsp; code
+						<a href="https://arxiv.org/abs/2510.11417" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; <a href="https://github.com/juneyeeHu/LM-EEC" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
 					</p>
 				</td>
@@ -124,7 +148,7 @@
 						<br>
 						<font>Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2025. (<b>Spotlight</b>)</font>
 						<br>
-						paper  &nbsp; code
+						<a href="https://openreview.net/pdf?id=q06YjUj0FB" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; <a href="https://github.com/LitingLin/LoRATv2" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
 					</p>
 				</td>
@@ -140,7 +164,7 @@
 						<br>
 						<font>Advances in Neural Information Processing Systems (<b>NeurIPS</b>), 2025.</font>
 						<br>
-						paper  &nbsp; code
+						<a href="https://arxiv.org/abs/2510.16670" target="_blank"><font color="#2D61FF">paper</font></a>
 						<br>
 					</p>
 				</td>
