--- a/publications.html
+++ b/publications.html
@@ -116,7 +116,7 @@
 						<br>
 						<font>Computer Vision and Image Understanding (<b>CVIU</b>), 306: 130848, 2025.</font>
 						<br>
-						<a href="https://arxiv.org/abs/2510.23368" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; <a href="#" target="_blank"><font color="#2D61FF">data</font></a>
+						<a href="https://arxiv.org/abs/2510.23368" target="_blank"><font color="#2D61FF">paper</font></a>  &nbsp; <a href="https://huggingface.co/datasets/Ailovejinx/planartrackplus" target="_blank"><font color="#2D61FF">data</font></a>
 						<br>
 					</p>
 				</td>
