--- a/group.html
+++ b/group.html
@@ -33,11 +33,8 @@
 		<li><font style="font-weight:bold; line-height: 120%">Bing Fan</font>, PhD student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Shaohua Dong</font>, PhD student</li>
 		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font>, PhD student</li> <!--(female)--> 
-		<li><font style="font-weight:bold; line-height: 120%">Naga Prudhvi Mareedu</font>, MS student</li>
-		<li><font style="font-weight:bold; line-height: 120%">Cuicui Zhang</font>, MS student</li> <!--(female)--> 
-		<li><font style="font-weight:bold; line-height: 120%">Subin Ghimire</font>, Undergraduate student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Dylan Joseph</font>, K-12 student from TAMS</li>
-		<li><font style="font-weight:bold; line-height: 120%">Michelle Li</font>, K-12 student from TAMS</li> <!-- (female) -->
+		
 		<li><font style="font-weight:bold; line-height: 120%">Jonas Li</font>, K-12 student from TAMS</li>
 		
 		
@@ -59,6 +56,10 @@
 	<font size="4" color="black"><b>Alumni</b></font>
 	<br>
 	<ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">Michelle Li</font>, K-12 student from TAMS, 2025</li> <!-- (female) -->
+		<li><font style="font-weight:bold; line-height: 120%">Naga Prudhvi Mareedu</font>, MS, 2025</li>
+		<li><font style="font-weight:bold; line-height: 120%">Cuicui Zhang</font>, MS, 2025</li> <!--(female)--> 
+		<li><font style="font-weight:bold; line-height: 120%">Subin Ghimire</font>, Undergraduate student, 2025</li>
 		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, MS, 2024; volunteer research assistant, 2025</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Hasini Kanuru</font>, Undergraduate student, 2025</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Andres Escamilla Varela</font>, MS, 2025</li>
