--- a/teaching.html
+++ b/teaching.html
@@ -30,36 +30,42 @@
 	<br>
 	
 	<ul style="margin-top:5px;">
-		<!-- [<a href="https://hengfan2010.github.io/teaching/23F-6280/index.htm" target="_blank"><font color="#2D61FF">course website</font></a>] -->
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 2110, Foundations of Data Structures, Fall 2025. 
-				<!-- [<a href="https://hengfan2010.github.io/teaching/25F-2110/" target="_blank"><font color="#2D61FF">course website</font></a>]  -->
-				<!-- CSCE 6280, Advanced Topics in Artificial Intelligence, Fall 2023, Fall 2024 [<a href="https://hengfan2010.github.io/teaching/24F-6280/index.htm" target="_blank"><font color="#2D61FF">course website</font></a>].  -->
-				<br>
-			</p>
-		</li>
 
 		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 6280, Advanced Topics in Artificial Intelligence, Fall 2023, Fall 2024. 
-				<!-- CSCE 6280, Advanced Topics in Artificial Intelligence, Fall 2023, Fall 2024 [<a href="https://hengfan2010.github.io/teaching/24F-6280/index.htm" target="_blank"><font color="#2D61FF">course website</font></a>].  -->
-				<br>
-			</p>
+			CSCE 6260, Advanced Topics in Pattern Recognition and Image Processing
+			<ul style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<li>Spring 2026</li>
+				<li><a href="https://hengfan2010.github.io/teaching/26S-6260/index.htm" target="_blank"><font color="#2D61FF">course website</font></a></li>
+			</ul>
 		</li>
 
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 5218/4930, Deep Learning, Spring 2022, Spring 2023, Spring 2024, Spring 2025.
-				<br>
-			</p>
+		<li style="margin-top: 5px; margin-bottom: 5px;">
+			CSCE 2110, Foundations of Data Structures 
+			<ul style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<li>Fall 2025</li>
+			</ul>
+		</li>
+
+		<li style="margin-top: 5px; margin-bottom: 5px;">
+			CSCE 6280, Advanced Topics in Artificial Intelligence
+			<ul style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<li>Fall 2023, Fall 2024</li>
+			</ul>
+		</li>
+
+		<li style="margin-top: 5px; margin-bottom: 5px;">
+			CSCE 5218/4930, Deep Learning
+			<ul style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<li>Spring 2022, Spring 2023, Spring 2024, Spring 2025, Spring 2026</li>
+				<li><a href="https://hengfan2010.github.io/teaching/26S-5218/index.htm" target="_blank"><font color="#2D61FF">course website</font></a></li>
+			</ul>
 		</li>
 		
-		<li>
-			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				CSCE 3110, Data Structures and Algorithms, Fall 2021, Fall 2022.
-				<br>
-			</p>
+		<li style="margin-top: 5px; margin-bottom: 5px;">
+			CSCE 3110, Data Structures and Algorithms
+			<ul style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				<li>Fall 2021, Fall 2022</li>
+			</ul>
 		</li>
 		
     </ul>
