--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
     <div class="photo_intro">
         <img src="./personal/hfan-2022.jpeg" alt="Heng Fan" class="photo" height="130">
         <div class="intro">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="intro_name"><font size="5">Heng Fan</font></span>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="intro_name"><font size="4">Heng Fan</font></span>
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font size="4" style="line-height: 150%">Assistant Professor</font>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font size="4" style="line-height: 100%">Assistant Professor</font>
             <br> 
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font size="4" style="line-height: 100%">Vision and Artificial Intelligence Lab (VAIL)</font>
+			<br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://computerscience.engineering.unt.edu/"><font color="2D61FF">Department of Computer Science and Engineering</font></a>, <a href="https://www.unt.edu/"><font color="#2D61FF">University of North Texas</font></a>
 			<!-- <br>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://datascience.unt.edu/index.html"><font color="2D61FF">Department of Data Science (Affiliated Faculty)</font></a>, <a href="https://www.unt.edu/"><font color="#2D61FF">University of North Texas</font></a> -->
