--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <div class="intro">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="intro_name"><font size="4">Heng Fan</font></span>
             <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font size="4" style="line-height: 100%">Assistant Professor</font>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Assistant Professor
             <br> 
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font size="4" style="line-height: 100%">Vision and Artificial Intelligence Lab (VAIL)</font>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Vision and Artificial Intelligence Lab (VAIL)
 			<br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://computerscience.engineering.unt.edu/"><font color="2D61FF">Department of Computer Science and Engineering</font></a>, <a href="https://www.unt.edu/"><font color="#2D61FF">University of North Texas</font></a>
 			<!-- <br>
