--- a/teaching/26S-6260/index.htm
+++ b/teaching/26S-6260/index.htm
@@ -80,11 +80,8 @@ div img:hover{
 	</p>
 	
 	<p style="text-align:justify">
-	<font size="4">This is a research-oriented course that aims to provide latest frontiers in computer vision, pat-
-		tern recognition, multimodal learning, large models, and artificial intelligence (AI). It will describe
-		advanced approaches in AI, with a focus on recent topics such as prompt learning, multimodal
-		vision-language learning, multimodal large language models, visual generation, video understand-
-		ing, etc. Through this course, the students are expected to understand and digest various advanced
+	<font size="4">This is a research-oriented course that aims to provide latest frontiers in computer vision, pattern recognition, multimodal learning, large models, and artificial intelligence (AI). It will describe
+		advanced approaches in AI, with a focus on recent topics such as prompt learning, multimodal vision-language learning, multimodal large language models, visual generation, video understanding, etc. Through this course, the students are expected to understand and digest various advanced
 		AI topics by extensive in-class paper presentation and discussion.</font>
 	</p>
 	
