--- a/teaching/26S-6260/index.htm
+++ b/teaching/26S-6260/index.htm
@@ -197,9 +197,9 @@ div img:hover{
 			</tr>
 
 
-			<!-- <tr bgcolor="#e6f4e6">
-				<td style="text-align: center; padding: 8px;" rowspan="1">
-					<font size="4"><strong>Week 2</strong> (8/30)</font>
+			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="2">
+					<font size="4"><strong>Week 2</strong> (1/21)</font>
 				</td>
 				<td style="padding: 8px;">
 					<font size="4">
@@ -209,15 +209,354 @@ div img:hover{
 								An Image is Worth 16x16 Words: Transformers for Image Recognition at Scale, ICLR, 2021
 							</li>
 							<li>
-								Swin Transformer: Hierarchical Vision Transformer using Shifted Windows, ICCV, 2021
+								Vision Transformer with Deformable Attention, CVPR, 2022.
 							</li>
 						</ul>
-						<font style="color: blue;"><strong>Presenter: </strong> Joseph Caldwell </font>
+						<font style="color: blue;"><strong>Presenter: </strong> Lyuzhou Ye </font>
 					</font>
 				</td>
 			</tr>
 
+			<tr bgcolor="#e6f4e6">
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Prompt learning</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								Visual Prompt Tuning, ECCV, 2022
+							</li>
+							<li>
+								MaPLe: Multi-modal Prompt Learning, CVPR, 2023
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong> Qi Cai</font>
+					</font>
+				</td>
+			</tr>
 
+			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="2">
+					<font size="4"><strong>Week 3</strong> (1/28)</font>
+				</td>
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Parameter-efficient learning</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								Parameter-Efficient Transfer Learning for NLP, ICML, 2019
+							</li>
+							<li>
+								LoRA: Low-Rank Adaptation of Large Language Models, ICLR, 2022
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong> Zefeng He</font>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Learning by description</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								Visual Classification via Description from Large Language Models, ICLR, 2023
+							</li>
+							<li>
+								Evolving Interpretable Visual Classifiers with Large Language Models, ECCV, 2024
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong>Xin Gao</font>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="1">
+					<font size="4"><strong>Week 4</strong> (2/4)</font>
+				</td>
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Vision-language learning</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								Learning Transferable Visual Models From Natural Language Supervision, ICML, 2021
+							</li>
+							<li>
+								BLIP-2: Bootstrapping Language-Image Pre-training with Frozen Image Encoders and Large Language Models, ICML, 2023
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong>Mingchen Li</font>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="1">
+					<font size="4"><strong>Week 5</strong> (2/11)</font>
+				</td>
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Visual-language understanding</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								TubeDETR: Spatio-Temporal Video Grounding with Transformers, CVPR, 2022
+							</li>
+							<li>
+								Grounding DINO: Marrying DINO with Grounded Pre-Training for Open-Set Object Detection, ECCV, 2024
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong>Dominic Ani</font>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="1">
+					<font size="4"><strong>Week 6</strong> (2/18)</font>
+				</td>
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Image generation</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								Visual Autoregressive Modeling: Scalable Image Generation via Next-Scale Prediction, NeurIPS, 2024
+							</li>
+							<li>
+								Mean Flows for One-step Generative Modeling, NeurIPS, 2025
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong>Abhignya Jagathpally</font>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="1">
+					<font size="4"><strong>Week 7</strong> (2/25)</font>
+				</td>
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Segmentation</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								Segment Anything, ICCV, 2023
+							</li>
+							<li>
+								SAM 2: Segment Anything in Images and Videos, ICLR, 2025
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong>Gaoyi Chen</font>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="1">
+					<font size="4"><strong>Week 8</strong> (3/4)</font>
+				</td>
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Motion and tracking: optical flow</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								Raft: Recurrent all-pairs field transforms for optical flow, ECCV, 2020
+							</li>
+							<li>
+								MemFlow: Optical Flow Estimation and Prediction with Memory, CVPR, 2024
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong>Mohit</font>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="1">
+					<font size="4"><strong>Week 9</strong> (3/11)</font>
+				</td>
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Spring Break (no class)</strong><br>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="1">
+					<font size="4"><strong>Week 10</strong> (3/18)</font>
+				</td>
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Motion and tracking: depth estimation</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								Depth Anything: Unleashing the Power of Large-Scale Unlabeled Data, CVPR, 2024
+							</li>
+							<li>
+								Depth Anything V2, NeurIPS, 2024
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong>Hanzhi Zhang</font>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="2">
+					<font size="4"><strong>Week 11</strong> (3/25)</font>
+				</td>
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Motion and tracking: single object tracking</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								Joint feature learning and relation modeling for tracking: A one-stream framework, ECCV, 2022
+							</li>
+							<li>
+								A Distractor-Aware Memory for Visual Object Tracking with SAM2, CVPR, 2025
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong>Yan Qiao</font>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Motion and tracking: multi-object tracking</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								Trackformer: Multi-object tracking with transformers, CVPR, 2022
+							</li>
+							<li>
+								MeMOTR: Long-Term Memory-Augmented Transformer for Multi-Object Tracking, ICCV, 2023
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong>Sumera</font>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="1">
+					<font size="4"><strong>Week 12</strong> (4/1)</font>
+				</td>
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Motion and tracking: open-vocabulary tracking</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								OVTrack: Open-Vocabulary Multiple Object Tracking, CVPR, 2023
+							</li>
+							<li>
+								Matching Anything by Segmenting Anything, CVPR, 2024
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong>Divya </font>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="1">
+					<font size="4"><strong>Week 13</strong> (4/8)</font>
+				</td>
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Large models</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								Chain-of-thought prompting elicits reasoning in large language models, NeurIPS, 2022
+							</li>
+							<li>
+								Visual Instruction Tuning, NeurIPS, 2023
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong>Runze Liu</font>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="2">
+					<font size="4"><strong>Week 14</strong> (4/15)</font>
+				</td>
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Mamba: architecture</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								Mamba: Linear-Time Sequence Modeling with Selective State Spaces, COLM, 2024
+							</li>
+							<li>
+								Transformers are SSMs: Generalized models and efficient algorithms through structured state space duality, ICML, 2024
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong>Gautam Galada</font>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Mamba: application</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								Vision Mamba: Efficient Visual Representation Learning with Bidirectional State Space Model, CVPR, 2024
+							</li>
+							<li>
+								VideoMamba: State Space Model for Efficient Video Understanding, ECCV, 2024
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong>Lang Zhou</font>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="1">
+					<font size="4"><strong>Week 15</strong> (4/22)</font>
+				</td>
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Spatial Intelligence: visual search</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								V*: Guided Visual Search as a Core Mechanism in Multimodal LLMs, CVPR, 2024
+							</li>
+							<li>
+								Re-thinking Temporal Search for Long-Form Video Understanding, CVPR, 2025
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong>Ruiyao Liu</font>
+					</font>
+				</td>
+			</tr>
+
+			<tr bgcolor="#e6f4e6">
+				<td style="text-align: center; padding: 8px;" rowspan="1">
+					<font size="4"><strong>Week 16</strong> (4/29)</font>
+				</td>
+				<td style="padding: 8px;">
+					<font size="4">
+						<strong>Diffusion</strong><br>
+						<ul style="margin-top:5px;margin-bottom: 5px;">
+							<li>
+								High-Resolution Image Synthesis With Latent Diffusion Models, CVPR, 2022
+							</li>
+							<li>
+								Scalable Diffusion Models with Transformers, ICCV, 2023
+							</li>
+						</ul>
+						<font style="color: blue;"><strong>Presenter: </strong>Xinpeng Xie</font>
+					</font>
+				</td>
+			</tr>
+
+<!-- 
 			<tr bgcolor="#d3f6fc">
 				<td style="text-align: center; padding: 8px;" rowspan="1">
 					<font size="4"><strong>Week 3</strong> (9/6)</font>
