--- a/teaching/26S-6260/index.htm
+++ b/teaching/26S-6260/index.htm
@@ -113,19 +113,19 @@ div img:hover{
 	<font size="4">In addition to the textbooks, you're highly encouraged to read more related papers.</font>
 	</p>
 
-	<!-- <HR>
+	<HR>
 	
 		<p style="margin-top:5px;">
 		<font size="4"> <b>Papers to review and due dates</b></font> 
 		</p>
 		
 		<p style="text-align:justify">
-		<font size="4">There are 11 papers in total to review throughout the whole semester. Please submit your paper review before the corresponding due date. <font style="color: red;">Late submissions will NOT be accepted.</font>
+		<font size="4">The following includes the papers to review throughout the whole semester. Please submit your paper review before the corresponding due date. <font style="color: red;">Late submissions will NOT be accepted.</font>
 		<ol>
 			<li>
-				<font size="4"> CrossViT: Cross-Attention Multi-Scale Vision Transformer for Image Classification, ICCV, 2021.</font> <br> <font size="4" style="color: red;"> Due: 8/30/2024</font>
+				<font size="4"> CrossViT: Cross-Attention Multi-Scale Vision Transformer for Image Classification, ICCV, 2021.</font> <br> <font size="4" style="color: red;"> Due: 1/28/2026</font>
 			</li>
-			<br>
+			<!-- <br>
 			<li>
 				<font size="4"> VICRegL: Self-Supervised Learning of Local Visual Features, NeurIPS, 2022.</font> <br> <font size="4" style="color: red;"> Due: 9/6/2024</font>
 			</li>
@@ -164,10 +164,10 @@ div img:hover{
 			<br>
 			<li>
 				<font size="4"> Segment and Complete: Defending Object Detectors against Adversarial Patch Attacks with Robust Patch Detection, CVPR, 2022.</font> <br> <font size="4" style="color: red;"> Due: 11/8/2024</font>
-			</li>
+			</li> -->
 
 		</ol>
-		</p> -->
+		</p>
 	
 	<HR>
 
