--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 
 	<font size="4" color="black"><b>News</b>&nbsp;<img src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:0px;">
+		<li><font style="font-weight:bold; line-height: 120%">2026-01:</font> A paper on spatial-temporal video grounding (pdf/code-data) is accepted to <a href="https://iclr.cc/" target="_blank"><font><font color="#2D61FF">ICLR 2026</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2025-12:</font> I will serve as an Associate Editor for Image and Vision Computing (IVC).</li>
 		<li><font style="font-weight:bold; line-height: 120%">2025-11:</font> I will be serving as an Area Chair for <a href="https://2026.ieeeicme.org/" target="_blank"><font><font color="#2D61FF">ICME 2026</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2025-11:</font> A paper on video event boundary detection (<a href="https://arxiv.org/abs/2512.00475" target="_blank"><font><font color="#2D61FF">pdf</font></font></a>) is accepted to <a href="https://wacv.thecvf.com/" target="_blank"><font><font color="#2D61FF">WACV 2026</font></font></a>.</li>
