--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 
 	<font size="4" color="black"><b>News</b>&nbsp;<img src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:0px;">
-		<li><font style="font-weight:bold; line-height: 120%">2026-02:</font> A paper on multimodal tracking (pdf/code) is accepted to <a href="https://2026.ieee-icra.org/" target="_blank"><font><font color="#2D61FF">ICRA 2026</font></font></a>.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2026-02:</font> A paper on multimodal object tracking (pdf/code) is accepted to <a href="https://2026.ieee-icra.org/" target="_blank"><font><font color="#2D61FF">ICRA 2026</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2026-01:</font> A paper on spatial-temporal video grounding (pdf/code-data) is accepted to <a href="https://iclr.cc/" target="_blank"><font><font color="#2D61FF">ICLR 2026</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2026-01:</font> A paper on object detection (<a href="https://arxiv.org/abs/2509.09085" target="_blank"><font><font color="#2D61FF">pdf</font></font></a>/<a href="https://github.com/61s61min/IRDFusion" target="_blank"><font><font color="#2D61FF">code</font></font></a>) is accepted to Pattern Recognition.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2025-12:</font> I will serve as an Associate Editor for Image and Vision Computing (IVC).</li>
