--- a/publications.html
+++ b/publications.html
@@ -82,6 +82,54 @@
 		<table border=0 cellpadding=4>
 			
 			<tr>
+				<td><img src="./publication/DMTrack.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">DMTrack: Spatio-Temporal Multimodal Tracking via Dual-Adapter</font>
+						<br>
+						<font color="#000000">W. Li, S. Dong, H. Lu, Y. Zhang, H. Fan&dagger;, and L. Zhang&dagger;</font>
+						<br>
+						<font>IEEE International Conference on Robotics and Automation (<b>ICRA</b>), 2026.</font>
+						<br>
+						<a href="https://arxiv.org/abs/2508.01592" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <font>code</font>
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">OmniSTVG: Toward Spatio-Temporal Omni-Object Video Grounding</font>
+						<br>
+						<font color="#000000">J. Yao, X. Deng, X. Gu, M. Dai, B. Fan, Z. Zhang, Y. Huang, H. Fan&dagger;, and L. Zhang&dagger;</font>
+						<br>
+						<font>International Conference on Learning Representations (<b>ICLR</b>), 2026.</font>
+						<br>
+						<a href="https://arxiv.org/abs/2503.10500" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/JellyYao3000/OmniSTVG" target="_blank"><font color="#2D61FF">code-data</font></a>
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/IRDFusion.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">IRDFusion: Iterative Relation-Map Difference guided Feature Fusion for Multispectral Object Detection</font>
+						<br>
+						<font color="#000000">J. Shen, H. Zhan, X. Zuo, H. Fan, X. Yuan, J. Li, and W. Yang</font>
+						<br>
+						<font>Pattern Recognition (<b>PR</b>), 2026, in press.</font>
+						<br>
+						<a href="https://arxiv.org/abs/2509.09085" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/61s61min/IRDFusion" target="_blank"><font color="#2D61FF">code</font></a>
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
 				<td><img src="./publication/wacv-26.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
