--- a/publications.html
+++ b/publications.html
@@ -98,7 +98,7 @@
 			</tr>
 
 			<tr>
-				<td><img src="./publication/coming.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td><img src="./publication/OmniSTVG.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">OmniSTVG: Toward Spatio-Temporal Omni-Object Video Grounding</font>
