--- a/publications.html
+++ b/publications.html
@@ -103,7 +103,7 @@
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">OmniSTVG: Toward Spatio-Temporal Omni-Object Video Grounding</font>
 						<br>
-						<font color="#000000">J. Yao, X. Deng, X. Gu, M. Dai, B. Fan, Z. Zhang, Y. Huang, H. Fan&dagger;, and L. Zhang&dagger;</font>
+						<font color="#000000">J. Yao*, X. Gu*, X. Deng, M. Dai, B. Fan, Z. Zhang, Y. Huang, H. Fan&dagger;, and L. Zhang&dagger;</font>
 						<br>
 						<font>International Conference on Learning Representations (<b>ICLR</b>), 2026.</font>
 						<br>
