--- a/teaching/26S-5218/index.htm
+++ b/teaching/26S-5218/index.htm
@@ -164,32 +164,33 @@ course website regularly for updated reading materials.</font>
 		<!-- <li>
 			<font size="4"> <b>04/08/2025:</b> <a href="./presentation_schedule.htm" target="_blank"><font color="#0099ff">Project presentation schedule</font></a> is out.</font>
 		</li>
+		-->
+		<!-- <li>
+			<font size="4"> <b>2/1/2026:</b> Paper review list 1 is out, due on 2/12.</font>
+		</li>   -->
 		<li>
-			<font size="4"> <b>04/08/2025:</b> The project report is due on 4/21.</font>
+			<font size="4"> <b>2/1/2026:</b> The project list is out. Check it <font size="4"> <a href="./course_project.htm" target="_blank"><font color="#0099ff">here</font></a></font></font>
 		</li>
 		<li>
-			<font size="4"> <b>03/03/2025:</b> The project proposal is due on 3/13.</font>
-		</li>  -->
-		<li>
-			<font size="4"> <b>01/11/2026:</b> Course website has been launched.</font>
+			<font size="4"> <b>1/11/2026:</b> Course website has been launched.</font>
 		</li>
 	</ul>
 
 	
 	
-	<!-- <p style="margin-top:5px;">
+	<p style="margin-top:5px;">
 	<font size="4"> <b><font color="#FF0000">Links</font></b></font> 
 	</p>
 	
 	<ul>
-		<li>
+		<!-- <li>
 			<font size="4"> <a href="./presentation_schedule.htm" target="_blank"><font color="#0099ff">Course Project Presentation Schedule</font></a></font>
-		</li> 
+		</li>  -->
 		<li>
 			<font size="4"> <a href="./course_project.htm" target="_blank"><font color="#0099ff">Course Project</font></a></font>
 		</li>
 		
-	</ul> -->
+	</ul>
 	
 	
 	
@@ -205,7 +206,7 @@ course website regularly for updated reading materials.</font>
 	(<font size="4" color="#FF0000">Paper review lists will be gradually added.</font>) 
 
 	<p style="text-align:justify">
-	<font size="4" ><b>Paper review list 1</b> (<font size="4" color="#FF0000">due on 2/8</font>):</font>
+	<font size="4" ><b>Paper review list 1</b> (<font size="4" color="#FF0000">due on 2/12</font>):</font>
 	<ol >
 		<li >
 			<font size="4" > A Krizhevsky, I Sutskever, and G Hinton, ImageNet Classification with Deep Convolutional Neural Networks, <i>NeurIPS</i>, 2012.</font>
@@ -215,10 +216,10 @@ course website regularly for updated reading materials.</font>
 		</li>
 		
 	</ol>
-	</p>
+	</p> -->
 	
 	
-	<p style="text-align:justify">
+	<!-- <p style="text-align:justify">
 	<font size="4" ><b>Paper review list 2</b> (<font size="4" color="#FF0000">due on 2/20</font>):</font>
 	<ol start="3">
 		<li>
@@ -289,8 +290,8 @@ course website regularly for updated reading materials.</font>
 			<font size="4" > A. Dosovitskiy, L. Beyer, A. Kolesnikov, D. Weissenborn, X. Zhai, T. Unterthiner, M. Dehghani, M. Minderer, G. Heigold, S. Gelly, J. Uszkoreit, and N. Houlsby, An Image is Worth 16x16 Words: Transformers for Image Recognition at Scale, <i>ICLR</i>, 2021.</font>
 		</li>
 	</ol>
-	</p> -->
-	
+	</p>
+	 -->
 	
 	<HR>
 
@@ -332,7 +333,6 @@ course website regularly for updated reading materials.</font>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 1-5 </font></td>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
-
 		 
 		<tr>
 			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  1/22 </font></td>
@@ -343,9 +343,26 @@ course website regularly for updated reading materials.</font>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 
-		<!--
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  <b>Week 3</b> <br> 1/28 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 3</b> <br> 1/27 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<b>No Class (due to winter storm) </b> </font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  1/29 </font></td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				<font size="4"><b>PyTorch Tutorial</b>  </font>
+			</td>
+			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  <b>Week 4</b> <br> 2/3 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<font size="4"><b>Neural network basics-2</b>  </font>
 			</td>
@@ -354,13 +371,16 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/30 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 2/5 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<font size="4"><b>Deep neural network training-1</b>  </font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 7, 8, 11 </font></td>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
+
+		<!--
+		
 
 		<tr>
 			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 4</b> <br> 2/4 </font></td>
