--- a/teaching/26S-5218/course_project.htm
+++ b/teaching/26S-5218/course_project.htm
@@ -36,7 +36,7 @@ div img:hover{
 	
     <p style="margin-top:5px;">
 	<center>
-	<font size="4"> <b>Spring 2025</b></font> &nbsp; &nbsp; 
+	<font size="4"> <b>Spring 2026</b></font> &nbsp; &nbsp; 
 	<br>
 	</center>
 	</p>
@@ -53,7 +53,7 @@ div img:hover{
 	
 	<br><br>
 	
-	<font color="#FF0000"><b>Note 1:</b> The course project can be individual work or teamwork (with up to three members in the team).</font>
+	<font color="#FF0000"><b>Note 1:</b> The course project can be individual work or teamwork (with up to two members in the team).</font>
 	
 	<br>
 	<font color="#FF0000"><b>Note 2:</b> The course project MUST be related to deep learning.</font>
@@ -71,10 +71,10 @@ div img:hover{
 	<font size="4">The timeline of the course project is as follows</font>
 	<ul>
 		<li>
-			<font size="4"> Proposal deadline: <font color="#FF0000">March 13, 2025</font></font>
+			<font size="4"> Proposal deadline: <font color="#FF0000">March 15, 2026</font></font>
 		</li>
 		<li>
-			<font size="4"> Final report deadline: <font color="#FF0000">April 21, 2024</font></font>
+			<font size="4"> Final report deadline: <font color="#FF0000">April 29, 2026</font></font>
 		</li>
 		<!-- <li>
 			<font size="4"> Presentation: <font color="#FF0000">Check it <a href="presentation_schedule.htm" target="_blank"><font color="#0099ff">here</font></a>.   </font></font>
@@ -208,13 +208,13 @@ div img:hover{
 	<font size="4">Grading of the course project will be based on the following components:</font>
 	<ul>
 		<li>
-			<font size="4"> Project proposal: 30%</font>
+			<font size="4"> Project proposal: 20% (of the final grade)</font>
 		</li>
 		<li>
-			<font size="4"> Final report: 50%</font>
+			<font size="4"> Final report: 25% (of the final grade)</font>
 		</li>
 		<li>
-			<font size="4"> Presentation: 20%</font>
+			<font size="4"> Presentation: 10% (of the final grade)</font>
 		</li>
 	</ul>
 	</p>
