--- a/teaching/26S-5218/paper_review.htm
+++ b/teaching/26S-5218/paper_review.htm
@@ -36,7 +36,7 @@ div img:hover{
 	
     <p style="margin-top:5px;">
 	<center>
-	<font size="4"> <b>Spring 2025</b></font> &nbsp; &nbsp; 
+	<font size="4"> <b>Spring 2026</b></font> &nbsp; &nbsp; 
 	<br>
 	</center>
 	</p>
@@ -75,7 +75,7 @@ div img:hover{
 		</li>
 		</br>
 		<li>
-			<font size="4" > Format: CVPR (2024) latex template (https://cvpr.thecvf.com/Conferences/2024/AuthorGuidelines) with one column (see the provided example).</font>
+			<font size="4" > Format: CVPR (2026) latex template (https://github.com/cvpr-org/author-kit/archive/refs/tags/CVPR2026-v1(latex).zip) with one column (see the provided example).</font>
 		</li>
 	</ol>
 	</p>
