--- a/publications.html
+++ b/publications.html
@@ -121,7 +121,7 @@
 						<br>
 						<font color="#000000">J. Shen, H. Zhan, X. Zuo, H. Fan, X. Yuan, J. Li, and W. Yang</font>
 						<br>
-						<font>Pattern Recognition (<b>PR</b>), 2026, in press.</font>
+						<font>Pattern Recognition (<b>PR</b>), 176: 113189, 2026.</font>
 						<br>
 						<a href="https://arxiv.org/abs/2509.09085" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/61s61min/IRDFusion" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
